appId: com.smoodee.cardmania
---
- launchApp:
    clearState: true
- assertVisible: 'Welcome to CardMania'
- assertVisible: 'email'
- tapOn: 'email'
- tapOn:
    id: 'email_input'
- inputText: 'vincentthan.hlam@gmail.com'
- tapOn: 'Continue'
- tapOn: 'Password'
- inputText: '789456123V'
- tapOn: 'Sign in'
- assertVisible: '.*Welcome back.*'
